--- a/python_built_in_functions.ipynb
+++ b/python_built_in_functions.ipynb
@@ -1070,15 +1070,530 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# max()\n",
+    "# Returns the largest item in an iterable - \n",
+    "print(max(set({0, 5, 2})))\n",
+    "# or the largest of two or more arguments\n",
+    "print(max(0, -4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<memory at 0x000001C874A46DC8>\n",
+      "1960481966600\n",
+      "83\n",
+      "bytearray(b'SOmon')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# memoryview()\n",
+    "# Returns a memory view object. obj must support buffer protocol (bytes, bytearray) - unlike bytes/str\n",
+    "\n",
+    "# Buffer protocol allows one object to expose its internal data (buffers)\n",
+    "# and the other to access those buffers (memory array) without intermediate copying.\n",
+    "\n",
+    "# This protocol is only accessible to us at the C-API level and not using our normal code base.\n",
+    "# So, in order to expose the same protocol to normal Python code base, memory views are present.\n",
+    "\n",
+    "# whenever we perform some action on an object (call a function of an object, slice an array)\n",
+    "# we (or Python) need to create a copy of the object.\n",
+    "\n",
+    "# Using buffer protocol, we can give another object access to use/modify the large data without copying it\n",
+    "ba = bytearray(bytes(\"Simon\", \"utf-8\"))\n",
+    "x = memoryview(ba)\n",
+    "print(x)\n",
+    "print(id(ba))  # what is the difference between id() and memoryview? They should both give memory address?\n",
+    "# id(): \"This is the address of the object in memory\".\n",
+    "# The “memory view” object is specially created from the given argument\n",
+    "\n",
+    "# We accessed the mv's 0th index ('A') and printed it (which gives the ASCII value - 75).\n",
+    "print(x[0])\n",
+    "\n",
+    "# Since, the memory view object x references the same buffer/memory\n",
+    "# updating the index in x also updates randomByteArray.\n",
+    "x[1] = 79  # need to be a bytearray - otherwise, with immutable bytes, \"cannot modify read-only memory\"\n",
+    "print(ba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum is: [12, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# min()\n",
+    "# Returns the smallest item in an iterable\n",
+    "num = [15, 300, 2700, 821]\n",
+    "num1 = [12, 2]\n",
+    "num2 = [34, 567, 78]\n",
+    "\n",
+    "# using min(iterable, *iterables, key)\n",
+    "print('Minimum is:', min(num, num1, num2, key=len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<list_iterator object at 0x000001C875BEC710>\n",
+      "5\n",
+      "9\n",
+      "cat\n",
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# next()\n",
+    "# Returns the next item in an iterable\n",
+    "# Return a default value when the iterable has reached to its end:\n",
+    "\n",
+    "# A list is an iterable and you can get iterator from it by using iter() function in Python.\n",
+    "random = [5, 9, 'cat']\n",
+    "randomIterator = iter(random)\n",
+    "print(randomIterator)\n",
+    "\n",
+    "# Output: 5\n",
+    "print(next(randomIterator, '-1'))\n",
+    "\n",
+    "# Output: 9\n",
+    "print(next(randomIterator, '-1'))\n",
+    "\n",
+    "# randomIterator is exhausted\n",
+    "# Output: '-1'\n",
+    "print(next(randomIterator, '-1'))\n",
+    "print(next(randomIterator, '-1'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'object'>\n",
+      "['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# object()\n",
+    "# Returns a new featureless object\n",
+    "# object is a base for all classes - You cannot add new properties or methods to this object\n",
+    "test = object()\n",
+    "\n",
+    "print(type(test))\n",
+    "print(dir(test))  # all attributes\n",
+    "# object does not have a __dict__,\n",
+    "# so you can’t assign arbitrary attributes to an instance of the object class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0o70\n",
+      "0o12 12\n",
+      "0o12 12\n",
+      "0o12 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# oct()\n",
+    "# Converts a number into an octal\n",
+    "print(oct(-56))\n",
+    "print('%#o' % 10, '%o' % 10)\n",
+    "print(f'{10:#o}', f'{10:o}')\n",
+    "print(format(10, '#o'), format(10, 'o'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# open()\n",
+    "# Opens a file and returns a file object\n",
+    "# Python has a encoding system which is platform dependent.\n",
+    "f = open(\"README.md\", mode = 'r', encoding='utf-8')\n",
+    "# Use 'b' mode, to read/write binary data as is without any transformations such as converting newlines\n",
+    "# to/from platform-specific values or decoding/encoding text using a character encoding.\n",
+    "# >>> with open('eggs.csv', 'rb') as csvfile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8364"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ord()\n",
+    "# Convert an integer representing the Unicode of the specified character\n",
+    "ord('€') # returns 8364\n",
+    "# inverse of chr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pow()\n",
+    "# Returns the value of x to the power of y\n",
+    "print(pow(2, 3))\n",
+    "# equivalent to x**y\n",
+    "print(pow(10, -2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Letter --- P\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print()\n",
+    "# Print OBJECTS to the text stream file, separated by sep and followed by end\n",
+    "# The file argument must be an object with a write(string) method\n",
+    "#   if it is not present or None, sys.stdout will be used - standard output device (screen).\n",
+    "print(\"Letter\", \"P\", sep=\" --- \")\n",
+    "# Since printed arguments are converted to text strings,\n",
+    "#   print() cannot be used with binary mode file objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# property()\n",
+    "# Gets, sets, deletes a property value\n",
+    "\n",
+    "# The @property decorator turns the voltage() method into a “getter” for a read-only attribute\n",
+    "# with the same name, and it sets the docstring for voltage to “Get the current voltage.”\n",
+    "class Parrot:\n",
+    "    def __init__(self):\n",
+    "        self._voltage = 100000\n",
+    "\n",
+    "    @property  # function decorator\n",
+    "    def voltage(self):\n",
+    "        \"\"\"Get the current voltage.\"\"\"\n",
+    "        return self._voltage\n",
+    "    \n",
+    "    @voltage.setter\n",
+    "    def voltage(self, value):\n",
+    "        self._voltage = value\n",
+    "\n",
+    "    @voltage.deleter\n",
+    "    def voltage(self):\n",
+    "        del self._voltage\n",
+    "# equivalent to\n",
+    "# voltage = property(get_voltage, set_voltage, del_voltage, \"I'm the 'voltage' property.\")\n",
+    "Parrot.voltage.__doc__\n",
+    "parrot = Parrot()\n",
+    "print(parrot.voltage)\n",
+    "parrot.voltage = 10\n",
+    "print(parrot.voltage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 2, 8, 7, 6, 5, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range()\n",
+    "# Rather than being a function, range is actually an immutable sequence type\n",
+    "x = range(10, 2, -1)\n",
+    "# x[1] = 2 - range(10, 2, -1) is immutable - 'range' object does not support item assignment\n",
+    "# use list() on it\n",
+    "y = list(x)\n",
+    "y[1] = 2\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Simon'\n",
+      "Simon\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"'Simon'\""
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# repr()\n",
+    "# Returns a printable representation of the given object.\n",
+    "# It returns a string that would yield an object with the same value when passed to eval().\n",
+    "x = 'Simon'\n",
+    "print(repr(x))\n",
+    "y = eval(repr(x)) # (approximation that holds true for most of built-in types)\n",
+    "print(y)\n",
+    "\n",
+    "class Person:\n",
+    "    name = 'Simon'\n",
+    "    def __repr__(self):\n",
+    "        return repr(self.name)\n",
+    "repr(Person())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "m\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reversed()\n",
+    "# Returns a reversed iterator.\n",
+    "# Work with objects\n",
+    "# - that have implemented __reversed__()\n",
+    "# - or support sequence protocol (__len__() and __getitem__()) as tuple, string, list or range\n",
+    "# remember :\n",
+    "# - iter() function returns an iterator object\n",
+    "# - list.reverse() method reverses a List.\n",
+    "nms = [\"n\", \"m\", \"s\"]  # or range(5, 9)\n",
+    "smn = reversed(nms)  # an iterator - convert it with list(reversed(seq))\n",
+    "for x in smn:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# round()\n",
+    "# Returns the floating point number rounded off to the given ndigits digits after the decimal point.\n",
+    "print(round(5.9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4}\n",
+      "{'u', 'e', 'o', 'i', 'a'}\n",
+      "{'e', 'u', 'o', 'i', 'a'}\n",
+      "{'u', 'e', 'o', 'i', 'a'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set()\n",
+    "# Returns a new set object\n",
+    "# difference with list():\n",
+    "# - In a set you can only have one instances of a member.\n",
+    "# - The order of the elements is unknown,\n",
+    "# - x in a_set works in O(1) [O(len(list)) for list]. List length does not affect this query\n",
+    "# - __eq__ and __hash__ have to be defined to add object to a set()\n",
+    "# -- s.add([0]) unhashable type: 'list'\n",
+    "# -- hashable means could be used for dictionary key. Since list are mutable, they cannot. Unlike tuples\n",
+    "\n",
+    "print(set(range(5)))\n",
+    "# for set\n",
+    "print(set({'a', 'e', 'i', 'o', 'u'}))\n",
+    "# from dictionary\n",
+    "print(set({'a':1, 'e': 2, 'i':3, 'o':4, 'u':5}))\n",
+    "# from frozen set\n",
+    "frozenSet = frozenset(('a', 'e', 'i', 'o', 'u'))\n",
+    "print(set(frozenSet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name is: None\n",
+      "Age is: 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setattr()\n",
+    "# Sets an attribute (property/method) of an object\n",
+    "class Person:\n",
+    "    name = 'Simon'\n",
+    "p = Person()\n",
+    "# setting attribute name to None\n",
+    "setattr(p, 'name', None)\n",
+    "print('Name is:', p.name)\n",
+    "\n",
+    "# setting an attribute not present - it creates one\n",
+    "setattr(p, 'age', 23)\n",
+    "print('Age is:', p.age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'd', 'g')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slice()\n",
+    "# Returns a slice object\n",
+    "# The slice object is used to slice a given sequence (string, bytes, tuple, list or range)\n",
+    "# or any object which supports sequence protocol (implements __getitem__() and __len__() method).\n",
+    "a = (\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\", \"h\")\n",
+    "# Use the step parameter to return every third item\n",
+    "x = slice(0, 8, 3) # returns a slice object\n",
+    "print(a[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# max()\n",
-    "# Returns the largest item in an iterable - or the largest of two or more arguments\n",
-    "# If multiple items are maximal, the function returns the first one encountered\n"
+    "# sorted()\n",
+    "# Returns a sorted list\n"
    ]
   },
   {
@@ -1096,25 +1611,7 @@
     }
    ],
    "source": [
-    "memoryview()\tReturns a memory view object\n",
-    "min()\tReturns the smallest item in an iterable\n",
-    "next()\tReturns the next item in an iterable\n",
-    "object()\tReturns a new object\n",
-    "oct()\tConverts a number into an octal\n",
-    "open()\tOpens a file and returns a file object\n",
-    "ord()\tConvert an integer representing the Unicode of the specified character\n",
-    "pow()\tReturns the value of x to the power of y\n",
-    "print()\tPrints to the standard output device\n",
-    "property()\tGets, sets, deletes a property\n",
-    "range()\tReturns a sequence of numbers, starting from 0 and increments by 1 (by default)\n",
-    "repr()\tReturns a readable version of an object\n",
-    "reversed()\tReturns a reversed iterator\n",
-    "round()\tRounds a numbers\n",
-    "set()\tReturns a new set object\n",
-    "difference with list\n",
-    "setattr()\tSets an attribute (property/method) of an object\n",
-    "slice()\tReturns a slice object\n",
-    "sorted()\tReturns a sorted list\n",
+    "\n",
     "@staticmethod()\tConverts a method into a static method\n",
     "str()\tReturns a string object\n",
     "sum()\tSums the items of an iterator\n",
@@ -1161,7 +1658,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "# Telling Python the encoding of your source file - how the interpreter reads the characters in this file\n",
+    "# ASCII = default for Python 2 - problem when asking print 'ă'\n",
+    "# UTF-8 = default for Python 3"
+   ]
   },
   {
    "cell_type": "code",
